--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,67 @@
+aiogrpc==1.8
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.11
+aiosignal==1.3.1
+annotated-types==0.7.0
+asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.1.0
+backports.zoneinfo==0.2.1
 base58==1.0.3
+bitarray==3.1.0
 certifi==2019.9.11
 cffi==1.13.1
 chardet==3.0.4
+charset-normalizer==3.4.1
+ckzg==2.0.1
+CouchDB==1.2
 cryptography==2.8
-Django==2.2.6
+cytoolz==1.0.1
+Django==4.2.19
 django-ipfs-storage==0.0.4
+eth-abi==5.2.0
+eth-account==0.13.5
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.6.1
+eth-rlp==2.2.0
+eth-typing==5.2.0
+eth-utils==5.2.0
+fabric-sdk-py==0.9.0
+frozenlist==1.5.0
+grpcio==1.70.0
+hexbytes==1.3.0
+hkdf==0.0.3
 idna==2.8
 ipfsapi==0.4.4
-ipfshttpclient==0.4.12
+ipfshttpclient==0.7.0
+lark-parser==0.7.1
 multiaddr==0.0.8
+multidict==6.1.0
 netaddr==0.7.19
-pkg-resources==0.0.0
+parsimonious==0.10.0
+propcache==0.2.0
+protobuf==3.20.3
 psycopg2==2.8.4
 pycparser==2.19
+pycryptodome==3.21.0
+pycryptodomex==3.21.0
+pydantic==2.10.6
+pydantic-core==2.27.2
 pytz==2019.3
-requests==2.22.0
+pyunormalize==16.0.0
+regex==2024.11.6
+requests==2.32.3
+rlp==4.1.0
+Rx==3.2.0
+safe-pysha3==1.0.4
 six==1.12.0
-sqlparse==0.3.0
-urllib3==1.25.6
+sqlparse==0.5.3
+toolz==1.0.0
+types-requests==2.32.0.20241016
+typing-extensions==4.12.2
+urllib3==2.2.3
 varint==1.0.2
+web3==7.8.0
+websockets==13.1
+yarl==1.15.2
